# clean-code-skill

./: .gitignore  COMMIT-GUIDE.md  README.md  RELEASE-NOTES.md  ai-clean-code-skill-guide.md  commitlint.config.cjs  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish-npm.yml  publish-pypi.yml  release-notes.yml
.husky/: commit-msg  pre-commit
linting/csharp/: .editorconfig
linting/go/: .golangci.yml
linting/java/: checkstyle.xml  pmd-ruleset.xml
linting/python/: pyproject.toml
scripts/: generate-release-notes.sh  migrate.sh
skills/claude/: CLAUDE.md
skills/copilot/: _rules.instructions.md  task-summary.instructions.md
skills/cursor/.cursor/rules/: clean-code-review.mdc  task-summary.mdc
skills/generic/: lint-report-system-prompt.txt  system-prompt.txt  task-summary-system-prompt.txt
skills/opencode/: AGENTS.md
skills/shared/: release-notes-prompt.md  rules.md  task-summary-prompt.md
skills/windsurf/: .windsurfrules
src/clean_code_skill_kit/: COMMIT-GUIDE.md  __init__.py  cli.py  linting
